--- a/assets/css/resume.css
+++ b/assets/css/resume.css
@@ -57,6 +57,12 @@ ul.icons li a:before {
     text-transform: none !important;
 }
 
+ul.no-bullets {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
 @media (min-width: 992px) {
     body {
         padding-top: 0;
@@ -349,4 +355,49 @@ dl dd {
 ::-moz-placeholder {
     color: #616f77 !important;
     opacity: 1;
+}
+
+/* Abilities specific attributes */
+#abilities ul > li {
+    min-height: 30px;
+    padding: 3px 0;
+}
+
+#abilities ul > li .ability-title {
+    display: inline-block;
+    width: 60%;
+}
+
+#abilities ul > li .ability-score {
+    float: right;
+}
+
+/* glyphicon styles */
+#abilities ul > li .ability-score .glyphicon.filled {
+    color: var(--mtn-dusk);
+}
+
+#abilities ul > li .ability-score .glyphicon {
+    color: #DFE0E0;
+    font-size: 14px;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
+}
+
+.glyphicon-star:before {
+    content: "\e006";
+}
+
+.glyphicon {
+    position: relative;
+    top: 1px;
+    display: inline-block;
+    font-family: 'Glyphicons Halflings';
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
